[BlobStorage] Adding error code translations for cache storage metadata.

BUG=631262

Review-Url: https://codereview.chromium.org/2346623002
Cr-Commit-Position: refs/heads/master@{#418712}

Former-commit-id: 9f16719bc8a0db5a53c0afa4ddab23ca594befc8